inital commit for resource module demo

--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -4,3 +4,7 @@ collections:
     source: https://galaxy.ansible.com
   - name: arista.eos
     source: https://galaxy.ansible.com
+  - name: cisco.ios
+    source: https://galaxy.ansible.com
+  - name: juniper.junos
+    source: https://galaxy.ansible.com
