--- a/resource-modules-demo/ios.yml
+++ b/resource-modules-demo/ios.yml
@@ -4,18 +4,21 @@
     state: gathered
   register: ios_interfaces
 
-- debug: var=ios_interfaces
+- debug:
+    msg: "{{ ios_interfaces | to_nice_yaml }}"
 
 - name: Gather IOS interface
   cisco.ios.ios_l2_interfaces:
     state: gathered
   register: ios_l2interfaces
 
-- debug: var=ios_l2interfaces
+- debug:
+    msg: "{{ ios_l2interfaces | to_nice_yaml }}"
 
 - name: Gather IOS interface
   cisco.ios.ios_l3_interfaces:
     state: gathered
   register: ios_l3interfaces
 
-- debug: var=ios_l3interfaces
+- debug:
+    msg: "{{ ios_l3interfaces | to_nice_yaml }}"
