--- a/backup_sot.yml
+++ b/backup_sot.yml
@@ -1,22 +1,11 @@
-- hosts: cisco
+- name: Retrieve Github Repo
+  hosts: localhost
   gather_facts: true
-  vars:
-    GIT_REPO: https://github.com/termlen0/nw-demo
-    GH_ACCESS_TOKEN: "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"
-    username: "Ajay Chenampara"
-    email: ajay.chenampara@gmail.com
   tasks:
-    - name: Network Backup and Resource Manager
-      ansible.builtin.include_role:
-        name: network.backup.run
-      vars:
-        operation: backup
-        type: full
-        data_store:
-          scm:  
-            origin:
-              url: "{{ GIT_REPO }}"
-              token: "{{ GH_ACCESS_TOKEN }}"
-              user:
-                name: "{{ username }}"
-                email: "{{ email }}"
+    - name: Retrieve a repository from a distant location and make it available locally
+      ansible.scm.git_retrieve:
+        origin:
+          url: git@github.com:cidrblock/scm_testing.git
+        upstream:
+          url: git@github.com:ansible-network/scm_testing.git
+      register: repository
